Добавляет разметку "подвала" главной страницы

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
+
   <body>
     <header class="page-header">
       <nav class="navigation">
@@ -47,7 +49,7 @@
       <h1 class="visually-hidden">
         Добро пожаловать в город Седона!
       </h1>
-      <img class="WelcomToSedona" src="" alt="Добро пожаловать в город Седона!">
+      <img class="welcomtosedona" src="" alt="Добро пожаловать в город Седона!">
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <p class="advantages-main-description">
@@ -56,7 +58,7 @@
         <p class="advantages-main-description">
           Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
         </p>
-        <ol class="advantages-list">
+        <ul class="advantages-list">
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
@@ -79,7 +81,7 @@
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             <img class="advantages-img" src="" alt="Фотография моста дьявола">
           </li>
-        </ol>
+        </ul>
       </section>
       <section class="services">
         <h2 class="visually-hidden">Услуги</h2>
@@ -119,9 +121,51 @@
         <a class="interest-link button">Поиск гостиницы В Седоне</a>
       </section>
     </main>
+    <footer class="page-footer">
+      <section class="footer-newsletter">
+        <h2 class="newsletter-title">Подпишитесь на рассылку</h2>
+        <p class="newsletter-description">
+          Только полезная информация и никакого спама, честное бойскаутское!
+        </p>
+        <form class="newsletter-form">
+          <input class="newsletter-email" placeholder="Ваш e-mail" type="email">
+          <button class="newsletter-button" type="submit">
+            <span class="newsletter-button-name">
+              Подписаться
+            </span>
+          </button>
+        </form>
+      </section>
+      <section class="footer-social">
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          </li>
+          <li class="social-item">
+            <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+          </li>
+        </ul>
+      </section>
 
+    </footer>
 
     <!--<p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>-->
 
   </body>
+
 </html>
